--- a/package.json
+++ b/package.json
@@ -13,20 +13,23 @@
   },
   "dependencies": {
     "@heroicons/react": "2.0.18",
-    "@material-tailwind/react": "2.1.2",
+    "@material-tailwind/react": "^2.1.2",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "next": "13.4.0",
-    "react": "18",
-    "react-dom": "18"
+    "react": "^18.3.1",
+    "react-dom": "18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20",
-    "@types/react": "18",
+    "@types/react": "^18.2.42",
     "@types/react-dom": "18",
     "autoprefixer": "10",
     "eslint": "8",
     "eslint-config-next": "13.5.4",
     "postcss": "8",
     "tailwindcss": "3",
-    "typescript": "5"
+    "typescript": "^5.5.3"
   }
 }
