--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "^2.1.2",
-    "fs": "^0.0.1-security",
+    "@types/express": "^4.17.21",
+    "express": "^4.19.2",
+    "fs": "^0.0.2",
     "gray-matter": "^4.0.3",
     "next": "13.4.0",
     "react": "^18.3.1",
